[webui] Fix flickering elements in Kiwi section
Some times when putting the mouse over the name of a repository/package
the near elements suddenly move to the line below.

--- a/src/api/app/assets/stylesheets/webui/application/kiwi_image.scss
+++ b/src/api/app/assets/stylesheets/webui/application/kiwi_image.scss
@@ -22,21 +22,31 @@
   }
 }
 
-.kiwi_fields {
-  margin-left: 10px;
-  margin-top: 5px;
-  display: inline-block;
-  
-  .small-text{ font-size: x-small; }
-}
+#kiwi-repositories-list, #kiwi-packages-list {
+  padding-left: 10px;
+  padding-right: 10px;
 
-.kiwi_list_item {
-  font-weight: bold;
-  padding: 5px;
+  .kiwi_fields {
+    margin-top: 3px;
+    display: inline-block;
+    line-height: 18px;
 
-  &:hover {
-    color: #fff;
-    background-color: #690;
-    border-radius: 3px;
+    .small-text{ font-size: x-small; }
+  }
+
+  .kiwi_list_item {
+    font-weight: bold;
+    padding: 3px 5px 2px;
+    padding-right: 25px;
+
+    &:hover {
+      background-color: #690;
+      border-radius: 3px;
+      padding-right: 5px;
+
+      .kiwi_element_name {
+        color: #FFFFFF;
+      }
+    }
   }
 }
